# FSR_study

./: .gitignore  CMakeLists.txt  README.md
semester2/homework1/: gaussian_method.c
semester2/homework2/: big_tanker_counter.c  main.c  makefile
